   when creating a samplesheet. Internally this option is available
   in some classes of the pipeline code base to indicate what driver
   should be used by the jobs, this functionality remains intact.
 - A simpler implementation of wr's limit groups to allow for setting
   a persistent limit globally and for using limit groups that map
   directly to accessors of the function definition object.

release 58.3.0
 - bugfix in the code for interaction with the Majora/COG-UK API:
   cope with no iseq_flowcell entry for resultset
 - function graph for the analysis pipeline - add early archival of
   the artic pp output to iRODS

release 58.2.0
 - enhancement of code for interaction with the Majora/COG-UK API
 - added analysis for Duplex-Seq libraries
 
release 58.1.0
 - added npg_climb2mlwh to update warehouse from uploaded
   climb data
 - added ability to use custom locations and/or names for the
   main log of the pipeline script
 - the main log of the pipeline script is copied to the analysis directory
 - add script for updating MLWH with state of Majora/COG-UK metadata

release 58.0.0
 - a class for generating job definitions for autoqc generic
   checks
 - implementation of job generation for autoqc generic checks
   for artic and ampliconstats
 - generation of the autoqc generic result for artic and the
   review result is removed from the stage2pp job for artic
 - generation of the autoqc generic result for ampliconstats is
   removed from the stage2App job for ampliconstats

release 57.17.0
 - a generic way to specify constructor options in the function
   listing in a registry and its implementation to iRODS archival
   jobs and a stage2pp job
 - implementation for the ampliconstats portable pipeline
 - new pipeline function - stage2App - and its mapping to the
   npg_pipeline::function::stage2pp class
 - a new portable pipeline to produce ampliconstats data and its
   mapping to the stage2App pipeline function

release 57.16.0