@@ -11,8 +11,6 @@ our $VERSION = '0';
 
 Readonly::Scalar our $POST_QC_REVIEW_SCRIPT => q{npg_pipeline_post_qc_review};
 Readonly::Scalar our $ARCHIVAL_PENDING      => q{archival pending};
-Readonly::Scalar  my $ARCHIVAL_IN_PROGRESS  => q{archival in progress};
-Readonly::Scalar  my $MAX_NUMBER_NV_RUNS_IN_ARCHIVAL => 4;
 
 sub build_pipeline_script_name {
   return $POST_QC_REVIEW_SCRIPT;
@@ -33,8 +31,7 @@ sub run {
       if ($self->seen->{$id_run}) {
         $self->info(qq{Already seen run $id_run, skipping...});
       } else {
-        if ( $self->staging_host_match($run->folder_path_glob) &&
-             (!$self->_instrument_model_is_novaseq($run) || $self->_can_start_nv_archival()) ) {
+        if ( $self->staging_host_match($run->folder_path_glob) ) {
           if ($self->run_command($id_run, $self->_generate_command($id_run))) {
             $self->info();
             $self->info(qq{Submitted run $id_run for archival});
@@ -58,25 +55,6 @@ sub _generate_command {
   my $path = join q[:], $self->local_path(), $ENV{PATH};
 
   return qq{export PATH=$path; $cmd};
-}
-
-sub _can_start_nv_archival {
-  my $self = shift;
-
-  my @runs = $self->runs_with_status($ARCHIVAL_IN_PROGRESS);
-  if (scalar @runs < $MAX_NUMBER_NV_RUNS_IN_ARCHIVAL) {
-    return 1;
-  }
-  my $num_nv = scalar
-               grep { $self->_instrument_model_is_novaseq($_) }
-               @runs;
-
-  return ($num_nv < $MAX_NUMBER_NV_RUNS_IN_ARCHIVAL);
-}
-
-sub _instrument_model_is_novaseq {
-  my ($self, $run) = @_;
-  return $run->instrument_format->model eq q[NovaSeq];
 }
 
 __PACKAGE__->meta->make_immutable;
