@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 22;
+use Test::More tests => 21;
 use Test::Exception;
 use Cwd;
 use List::MoreUtils qw{any};
@@ -38,7 +38,6 @@ package test_archival_runner;
 use Moose;
 extends 'npg_pipeline::daemon::archival';
 sub runfolder_path4run { return '/some/path' }
-sub check_lims_link { return {}; } #to prevent access to ml_warehouse
 
 ########test class definition end########
 
@@ -95,41 +94,6 @@ package main;
   is ($s1, 1, 'one run submittted on the first attempt');
   is ($s2, 1, 'one run submittted on the second attempt');
 }
-
-subtest 'limiting number of NovaSeq runs being archived' => sub {
-  plan tests => 8;
-
-  my $runner = test_archival_runner->new(
-    pipeline_script_name    => '/bin/true',
-    npg_tracking_schema     => $schema
-  );
-
-  my @id_runs_nv = sort { $a <=> $b } qw/26487 26486 25806 25751 25723 26671/;
-  my @runs = $schema->resultset('Run')->search({id_run => \@id_runs_nv}, {order_by => 'id_run'});
-  is (scalar @runs, scalar @id_runs_nv, 'correct runs in test db');
-  map { sleep 1; $_->update_run_status('archival pending', 'pipeline') } @runs;
-
-  my $s = $runner->run();
-  is ($s, 1, 'one run submitted');
-  $runs[0]->update_run_status('archival in progress', 'pipeline');
-  $s = $runner->run();
-  is ($s, 1, 'one run submitted');
-  $runs[1]->update_run_status('archival in progress', 'pipeline');
-  $s = $runner->run();
-  is ($s, 1, 'one run submitted');
-  $runs[2]->update_run_status('archival in progress', 'pipeline');
-  $s = $runner->run();
-  is ($s, 1, 'one run submitted');
-  $runs[3]->update_run_status('archival in progress', 'pipeline');
-  $s = $runner->run();
-  is ($s, 0, 'no runs submitted since four NovaSeq runs in archiva in progress');
-  $runs[0]->update_run_status('run archived', 'pipeline');
-  $s = $runner->run();
-  is ($s, 1, 'one run submitted since the number of runs in archival dropped');
-  $runs[4]->update_run_status('archival in progress', 'pipeline');
-  $s = $runner->run();
-  is ($s, 0, 'no runs submitted since four NovaSeq runs in archiva in progress');
-};
 
 subtest 'propagate failure of the command to run to the caller' => sub {
   plan tests => 4;
